[gd_scene load_steps=2 format=2]

[ext_resource path="res://Control2.gd" type="Script" id=1]

[node name="Main" type="Node2D"]

[node name="Control" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 1079.0
margin_bottom = 614.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="AddressInput" type="LineEdit" parent="Control/VBoxContainer"]
margin_right = 1079.0
margin_bottom = 146.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="LoadButton" type="Button" parent="Control/VBoxContainer"]
margin_top = 150.0
margin_right = 1079.0
margin_bottom = 296.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Load"

[node name="UserStats" type="Label" parent="Control/VBoxContainer"]
margin_top = 300.0
margin_right = 1079.0
margin_bottom = 446.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="PoolStats" type="Label" parent="Control/VBoxContainer"]
margin_top = 450.0
margin_right = 1079.0
margin_bottom = 596.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="Control/VBoxContainer"]
margin_top = 600.0
margin_right = 1079.0
margin_bottom = 614.0
text = "Made by Chris"

[node name="HttpUser" type="HTTPRequest" parent="Control"]

[node name="HttpPool" type="HTTPRequest" parent="Control"]

[connection signal="request_completed" from="Control/HttpUser" to="Control" method="_on_HttpUser_request_completed"]
[connection signal="request_completed" from="Control/HttpPool" to="Control" method="_on_HttpPool_request_completed"]
